src/test/ui/reachable/expr_struct.stderr
error: unreachable expression
  --> $DIR/expr_struct.rs:14:13
   |
LL |     let x = Foo { a: 22, b: 33, ..return };
   |             ^^^^^^^^^^^^^^^^^^^^^^------^^
   |             |                     |
   |             |                     diverging due to this
   |             unreachable expression
   |
note: lint level defined here
  --> $DIR/expr_struct.rs:4:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: unreachable expression
  --> $DIR/expr_struct.rs:19:33
   |
LL |     let x = Foo { a: return, b: 33, ..return };
   |                      ------     ^^ unreachable expression
   |                      |
   |                      diverging due to this

error: unreachable expression
  --> $DIR/expr_struct.rs:24:39
   |
LL |     let x = Foo { a: 22, b: return, ..return };
   |                             ------    ^^^^^^ unreachable expression
   |                             |
   |                             diverging due to this

error: unreachable expression
  --> $DIR/expr_struct.rs:29:13
   |
LL |     let x = Foo { a: 22, b: return };
   |             ^^^^^^^^^^^^^^^^------^^
   |             |               |
   |             |               diverging due to this
   |             unreachable expression

error: aborting due to 4 previous errors

